--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "alchemy-sdk": "^2.2.1",
+    "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
