--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/edge-config": "^0.1.0",
     "alchemy-sdk": "^2.2.1",
     "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
