--- a/package.json
+++ b/package.json
@@ -12,17 +12,25 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.0",
     "@vercel/edge-config": "^0.1.0",
     "alchemy-sdk": "^2.2.1",
+    "axios": "^1.2.1",
     "caver-js": "^1.9.0",
     "caver-js-ext-kas": "^1.12.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "flux": "^4.0.3",
+    "material-ui-icons": "^1.0.0-beta.36",
     "next": "13.0.3",
+    "next-intl": "^2.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "uuid": "^9.0.0"
+    "react-query": "^3.39.2",
+    "uuid": "^9.0.0",
+    "web3": "^1.8.1",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
