--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fireworks-js": "^2.10.0",
     "flux": "^4.0.3",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mongodb": "^4.13.0",
     "next": "13.0.3",
     "next-intl": "^2.10.2",
     "react": "18.2.0",
