--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.0",
@@ -26,14 +27,19 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "mongodb": "^4.13.0",
     "next": "13.0.3",
+    "next-auth": "^4.18.7",
     "next-intl": "^2.10.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "react-query": "^3.39.2",
     "react-tsparticles": "^2.7.1",
+    "rxjs": "^7.8.0",
     "tsparticles": "^2.7.1",
     "uuid": "^9.0.0",
     "web3": "^1.8.1",
+    "yup": "^0.32.11",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
