--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-tsparticles": "^2.7.1",
     "rxjs": "^7.8.0",
