--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.0",
+    "@next/font": "^13.1.1",
     "@vercel/edge-config": "^0.1.0",
     "alchemy-sdk": "^2.2.1",
     "axios": "^1.2.1",
