--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.11.0",
     "@next/font": "^13.1.1",
     "@vercel/edge-config": "^0.1.0",
+    "@vercel/og": "^0.0.27",
     "alchemy-sdk": "^2.2.1",
     "axios": "^1.2.1",
     "caver-js": "^1.9.0",
