--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@livepeer/react": "^2.1.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.0",
     "@next/font": "^13.1.1",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@vercel/edge-config": "^0.1.0",
     "@vercel/og": "^0.0.27",
     "alchemy-sdk": "^2.2.1",
@@ -24,24 +27,31 @@
     "caver-js-ext-kas": "^1.12.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "ethers": "^5.7.2",
     "fireworks-js": "^2.10.0",
     "flux": "^4.0.3",
+    "graphql": "^16.6.0",
     "inngest": "^0.9.0",
+    "ipfs-http-client": "^60.0.0",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.29.4",
     "mongodb": "^4.13.0",
     "next": "13.0.3",
     "next-auth": "^4.18.7",
     "next-intl": "^2.10.2",
+    "plyr-react": "^5.1.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
+    "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-tsparticles": "^2.7.1",
     "rxjs": "^7.8.0",
     "tsparticles": "^2.7.1",
     "uuid": "^9.0.0",
+    "wagmi": "^0.10.11",
     "web3": "^1.8.1",
     "yup": "^0.32.11",
     "zustand": "^4.1.5"
