--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "chai": "^4.2.0",
     "hardhat": "^2.12.6",
