--- a/.gitignore
+++ b/.gitignore
@@ -45,17 +45,6 @@ typechain-types
 
 # Hardhat files
 cache
-artifacts
+# artifacts
 
-
-node_modules
-.env
-coverage
-coverage.json
-typechain
-typechain-types
-
-# Hardhat files
-cache
-artifacts
 
