--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "@chainlink/contracts": "^0.6.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
