--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "wagmi": "^0.10.11",
     "web3": "^1.8.1",
     "yup": "^0.32.11",
-    "zustand": "^4.1.5"
+    "zustand": "^4.1.5",
+    "@graphprotocol/graph-cli": "0.37.6",
+    "@graphprotocol/graph-ts": "0.29.1"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.6.0",
@@ -84,6 +86,7 @@
     "tailwindcss": "^3.2.4",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "matchstick-as": "0.5.0"
   }
 }
