--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@apollo/client": "^3.7.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@graphprotocol/graph-cli": "0.37.6",
+    "@graphprotocol/graph-ts": "0.29.1",
     "@hookform/resolvers": "^2.9.10",
     "@livepeer/react": "^2.1.0",
     "@material-ui/core": "^4.12.4",
@@ -44,6 +46,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.41.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
@@ -56,9 +59,7 @@
     "wagmi": "^0.10.11",
     "web3": "^1.8.1",
     "yup": "^0.32.11",
-    "zustand": "^4.1.5",
-    "@graphprotocol/graph-cli": "0.37.6",
-    "@graphprotocol/graph-ts": "0.29.1"
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.6.0",
@@ -79,6 +80,7 @@
     "chai": "^4.2.0",
     "hardhat": "^2.12.6",
     "hardhat-gas-reporter": "^1.0.8",
+    "matchstick-as": "0.5.0",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -86,7 +88,6 @@
     "tailwindcss": "^3.2.4",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0",
-    "matchstick-as": "0.5.0"
+    "typescript": ">=4.5.0"
   }
 }
