--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-loader-spinner": "^5.3.4",
     "solidity-coverage": "^0.7.21",
     "tailwindcss": "^3.2.4",
     "ts-node": ">=8.0.0",
